k8s/eureka.yaml
# https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html

# Deployment资源对象
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eureka-svc-deployment

# 描述副本控制器ReplicaSet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      release: stable

# 描述pod的
  template:
    metadata:
      labels:
        app: eureka-svc
        env: test
    spec:
      containers:
        - name: eureka-svc
          image: hub.kaikeba.com/supergo/supergo-eureka:1.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 10086
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-svc
    env: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10086
