k8s/gateway-server.yaml
# 镜像仓库镜像
# deployment部署
# service部署
# Ingress部署
# hpa部署
# 修改初始化容量

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jshop-server
  name: jshop-server
  namespace: edu
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jshop-server
      release: jshopserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jshop-server
        release: jshopserver
    spec:
      containers:
      - env:
        - name: K
          value: V
        image: registry.cn-beijing.aliyuncs.com/kkb2/jshop:v2
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 5
        name: admin-server
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m # 请求开始初始化使用半个cpu, 此处的值可以不带单位(如0.5表示半个cpu)，也可以用m (millicpu), 0.5CPU等价于500m。
            memory: 1Gi  # 请求开始，初始化先申请1g的空间，上限是2G
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: kkb100
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jshop-server
  name: jshopserver
  namespace: edu
spec:
  ports:
  - name: jshop-server
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: jshop-server
  type: ClusterIP
