k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  selector:
    app: mysql
    release: stable
  ports:
  - name: http
    port: 3306

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-endpoints
subsets:
  - addresses:
    - ip: 10.20.24.52
    ports:
    - port: 3306
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
