k8s/zuul.yaml
# https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zuul-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zuul-svc
        env: test
    spec:
      containers:
        - name: zuul-svc
          image: hub.kaikeba.com/supergo/supergo-zuul:1.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zuul-service
spec:
  selector:
    app: zuul-svc
    env: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
